[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
description = "Ergonomic, checked cast functions for primitive types"
documentation = "http://japaric.github.io/cast.rs/cast"
keywords = ["checked", "cast", "primitive", "integer", "float"]
license = "MIT OR Apache-2.0"
name = "cast"
repository = "https://github.com/japaric/cast.rs"
version = "0.1.0"

[features]
# For tests only
unstable = ["quickcheck", "quickcheck_macros"]

[dependencies]
# TODO these should be optional dev-dependencies.
# cf https://github.com/rust-lang/cargo/issues/1596
quickcheck = { version = "0.2.25", optional = true }
quickcheck_macros = { version = "0.2.25", optional = true }
