[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
description = "Ergonomic, checked cast functions for primitive types"
documentation = "https://docs.rs/cast"
keywords = ["checked", "cast", "primitive", "integer", "float"]
license = "MIT OR Apache-2.0"
name = "cast"
repository = "https://github.com/japaric/cast.rs"
version = "0.2.0"

[features]
# Assume we should use `std` unless asked to do otherwise.
default = ["std"]
# Enable this to get a std::error::Error impl for convenient use with other
# libraries.
std = []

[dev-dependencies]
quickcheck = "0.4.1"
